--- a/gb/19/7/26/n11409906.md
+++ b/gb/19/7/26/n11409906.md
@@ -1,48 +1,51 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cbzs/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/cbzs/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/cbzs/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/cbzs/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/cbzs/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/cbzs/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/cbzs/2/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5640.md#1">»ª¸®¾Û½¹</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/cbzs/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>ÃñÕó¹¤µ³´ÙÁ®Êð³¹²é¾¯·½ÉæÏÓÊ§Ö°</h2>
-<img src="http://i.epochtimes.com/assets/uploads/2019/07/20190726-biyun-hk002-484x400.jpg" />
-<h6>¹¤µ³×òÈÕµ½Á®Êð±¨°¸£¬¾Ù±¨¾¯·½ÓÚÔªÀÊÏ®»÷ÊÂ¼þÖÐ£¬×ÝÈÝºÚÉç»áÏ®»÷ÊÐÃñ£¬ÉæÏÓ¸É·¸¹«Ö°ÈËÔ±ÐÐÎªÊ§µ±×ï¡££¨²Ìö©ÎÄ£¯´ó¼ÍÔª£©
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/vkwknd3513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/vkwknd3513/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/vkwknd3513/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/vkwknd3513/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/vkwknd3513/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/vkwknd3513/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>æ°‘é˜µå·¥å…šä¿ƒå»‰ç½²å½»æŸ¥è­¦æ–¹æ¶‰å«Œå¤±èŒ</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2019/07/20190726-biyun-hk002-484x400.jpg" />
+<h6>å›¾ä¸ºå·¥å…š25æ—¥åˆ°å»‰ç½²æŠ¥æ¡ˆï¼Œä¸¾æŠ¥è­¦æ–¹äºŽå…ƒæœ—è¢­å‡»äº‹ä»¶ä¸­ï¼Œçºµå®¹é»‘ç¤¾ä¼šè¢­å‡»å¸‚æ°‘ï¼Œæ¶‰å«Œå¹²çŠ¯å…¬èŒäººå‘˜è¡Œä¸ºå¤±å½“ç½ªã€‚ï¼ˆè”¡é›¯æ–‡ï¼å¤§çºªå…ƒï¼‰
 </h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê07ÔÂ26ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÁÖÐÄÒÇÏã¸Û±¨µ¼£©¼ÌÃñÖ÷µ³ºó£¬<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E6%B0%91%E9%98%B5.md">ÃñÕó</a>¼°<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%B7%A5%E5%85%9A.md">¹¤µ³</a>×òÈÕÏÈºóµ½Á®Õþ¹«Êð±¨°¸£¬¾Ù±¨¾¯·½ÓÚÔªÀÊÉËÈËÊÂ¼þÖÐ£¬×ÝÈÝºÚÉç»áÏ®»÷ÊÐÃñ£¬ÉæÏÓ¸É·¸¹«Ö°ÈËÔ±ÐÐÎªÊ§µ±¼°Ì°ÎÛ×ï£¬ÒªÇóÁ®Êðµ÷²é¡£</p>
-<p><a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E6%B0%91%E9%98%B5.md">ÃñÕó</a>¸±ÕÙ¼¯ÈË³Âð©»¸ÅúÆÀ£¬¾¯·½µ±ÈÕÎ´ÓÐ±£ÕÏÊÐÃñµÄÈËÉú°²È«£¬ÖÊÒÉÐÂ½ç±±¡¢ÔªÀÊ¾¯ÇøµÈ¶àÃûÖ¸»Ó¹ÙÉæ¹«Ö°ÈËÔ±ÐÐÎªÊ§µ±¡£ËûËµ´Óµ±ÈÕµÄÐÂÎÅÆ¬¶Î¿É¼û¶à¸öÒÉµã£¬¡°µ±ÈÕ¾¯·½Óë°×ÒÂÈËÊ¿ÉæÏÓÏ®»÷µÄÈËÕ¹Ê¾ÓÑºÃ£¬¶ø²»×÷³ö¾Ð²¶»ò½Ø²é¡£µÚ¶þµãÊÇ£¬¾¯ÎñÈËÔ±Ò»ÔçÖªµÀÓÐ»ú»á·¢Éú³åÍ»£¬ÇøÒéÔ±Ò»ÔçÍ¨Öª¾¯Ãñ¹ØÏµ¿Æ£¬µ«¾¯·½Ã»ÓÐÊÊÊ±µÄ²¿Êð£¬Ã»ÓÐ°²ÅÅÈËÊÖ£¬ÊÇ·Ç³£ÑÏÖØµÄÎÊÌâ¡£µÚÈýÊÇ¾¯ÎñÈËÔ±ÔÚÏÖ³¡£¬´ò999±¨°¸ÖÐÐÄÃ»ÈË½ÓÌý£¬»òÊÇÇÐÏß¡£ÉõÖÁÓÐÊÐÃñ´òÁËÖ®ºó£¬£¨¾¯Ô±£©Ì¬¶ÈºÜ²îµØ¶Ô´ý¡£¡±</p>
-<p>Í¬Ê±µ±ÍíÓÐÁ½Ãû¾¯Ô±µ½³¡ºó£¬ºÜ¿ì¾ÍÀë¿ªÏÖ³¡£¬ÈÎÓÉÊÐÃñ±»Ï®»÷£¬ËûÖÊÒÉ¾¯Îñ´¦´¦³¤Â¬Î°´Ï¼°¾¯·½£¬ÔÚÎ´ÓÐºÏÀí½âÊÍÏÂ£¬Ã»ÓÐÖ´ÐÐÖ°Îñ¡£Í¬Ê±ÖÊÒÉ¾¯·½ÉæÏÓÌ°ÎÛ£¬¡°¾¯ÎñÈËÔ±ºÍËùÎ½µÄ°×ÒÂÈËÊ¿»òÈýºÏ»á±³¾°ÈËÊ¿£¬ËûÃÇ±³ºóÊÇ·ñÓÐÌ°ÎÛµÄÊÂ¼þ£¬¶¼Ï£ÍûÁ®Õþ¹«Êð×÷³öµ÷²é£¬ÎªºÎ¾¯ÎñÈËÔ±¿ÉÒÔÓÐÈË·¸·¨¶ø²»×÷³ö¾Ð²¶¡£¡±</p>
-<p><a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%B7%A5%E5%85%9A.md">¹¤µ³</a>Ö÷Ï¯¹ùÓÀ½¡Á¬Í¬ÊýÃû³ÉÔ±µ½Á®Õþ±¨°¸¡£Ëû±íÊ¾£¬ÎÞÂÛÒ»°ãÊÐÃñ»òµ±ÇøÇøÒéÔ±ÔÚÊÂ·¢Ç°ÒÑÊÕµ½²»Í¬ÏûÏ¢£¬Ö¸ºÜ¿ÉÄÜºÚÉç»áÓÐÐÐ¶¯£¬²¢ÓÚÊÂ·¢µ±ÈÕ±¨°¸£¬µ«¾¯·½ÈÔÐèÔÚÊÂ·¢°ëÐ¡Ê±ºó²Åµ½³¡¡£Ëû²¢Ëµ£¬½ñ´Î¾Ù±¨ÌØ±ðÕë¶Ô°ËÏç·ÖÇøÖ¸»Ó¹Ù<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E6%9D%8E%E6%B1%89%E6%96%87.md">ÀîººÎÄ</a>£¬ÅúÆÀÀîººÎÄµ½³¡ºóÍêÈ«Ã»ÓÐ½øÐÐ¾Ð²¶ÐÐ¶¯£¬¸üÏò¼ÇÕß±íÊ¾³Ùµ½Òò¡°ÎÞ´÷±í¡±£¬²¢±»ÅÄµ½Óë°×ÒÂÈËÅÄ²²Í·£¬Î¥·´¾¯·½µÄ×¨ÒµÐÎÏóºÍÖ°Ôð£¬ÖÊÒÉËûÊÇÉæÏÓÎ¥·´<a href="https://github.com/cbzs/djy/blob/master/gb/tag/%E5%85%AC%E8%81%8C%E4%BA%BA%E5%91%98%E8%A1%8C%E4%B8%BA%E5%A4%B1%E5%BD%93%E7%BD%AA.md">¹«Ö°ÈËÔ±ÐÐÎªÊ§µ±×ï</a>£¬ÒªÇóÁ®Êð³¹²éÊÂ¼þ¡£¡ó</p>
-<p>ÔðÈÎ±à¼­£º³Âçäç²</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´07æœˆ26æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…æž—å¿ƒä»ªé¦™æ¸¯æŠ¥å¯¼ï¼‰ç»§æ°‘ä¸»å…šåŽï¼Œ<ahref="https://github.com/vkwknd3513/djy/blob/master/gb/tag/%E6%B0%91%E9%98%B5.md#1">æ°‘é˜µ</a>åŠ<ahref="https://github.com/vkwknd3513/djy/blob/master/gb/tag/%E5%B7%A5%E5%85%9A.md#1">å·¥å…š</a>æ˜¨æ—¥å…ˆåŽåˆ°å»‰æ”¿å…¬ç½²æŠ¥æ¡ˆï¼Œä¸¾æŠ¥è­¦æ–¹äºŽå…ƒæœ—ä¼¤äººäº‹ä»¶ä¸­ï¼Œçºµå®¹é»‘ç¤¾ä¼šè¢­å‡»å¸‚æ°‘ï¼Œæ¶‰å«Œå¹²çŠ¯å…¬èŒäººå‘˜è¡Œä¸ºå¤±å½“åŠè´ªæ±¡ç½ªï¼Œè¦æ±‚å»‰ç½²è°ƒæŸ¥ã€‚</p>
+<p><ahref="https://github.com/vkwknd3513/djy/blob/master/gb/tag/%E6%B0%91%E9%98%B5.md#1">æ°‘é˜µ</a>å‰¯å¬é›†äººé™ˆçš“æ¡“æ‰¹è¯„ï¼Œè­¦æ–¹å½“æ—¥æœªæœ‰ä¿éšœå¸‚æ°‘çš„äººç”Ÿå®‰å…¨ï¼Œè´¨ç–‘æ–°ç•ŒåŒ—ã€å…ƒæœ—è­¦åŒºç­‰å¤šåæŒ‡æŒ¥å®˜æ¶‰å…¬èŒäººå‘˜è¡Œä¸ºå¤±å½“ã€‚ä»–è¯´ä»Žå½“æ—¥çš„æ–°é—»ç‰‡æ®µå¯è§å¤šä¸ªç–‘ç‚¹ï¼Œâ€œå½“æ—¥è­¦æ–¹ä¸Žç™½è¡£äººå£«æ¶‰å«Œè¢­å‡»çš„äººå±•ç¤ºå‹å¥½ï¼Œè€Œä¸ä½œå‡ºæ‹˜æ•æˆ–æˆªæŸ¥ã€‚ç¬¬äºŒç‚¹æ˜¯ï¼Œè­¦åŠ¡äººå‘˜ä¸€æ—©çŸ¥é“æœ‰æœºä¼šå‘ç”Ÿå†²çªï¼ŒåŒºè®®å‘˜ä¸€æ—©é€šçŸ¥è­¦æ°‘å…³ç³»ç§‘ï¼Œä½†è­¦æ–¹æ²¡æœ‰é€‚æ—¶çš„éƒ¨ç½²ï¼Œæ²¡æœ‰å®‰æŽ’äººæ‰‹ï¼Œæ˜¯éžå¸¸ä¸¥é‡çš„é—®é¢˜ã€‚ç¬¬ä¸‰æ˜¯è­¦åŠ¡äººå‘˜åœ¨çŽ°åœºï¼Œæ‰“999æŠ¥æ¡ˆä¸­å¿ƒæ²¡äººæŽ¥å¬ï¼Œæˆ–æ˜¯åˆ‡çº¿ã€‚ç”šè‡³æœ‰å¸‚æ°‘æ‰“äº†ä¹‹åŽï¼Œï¼ˆè­¦å‘˜ï¼‰æ€åº¦å¾ˆå·®åœ°å¯¹å¾…ã€‚â€</p>
+<p>åŒæ—¶å½“æ™šæœ‰ä¸¤åè­¦å‘˜åˆ°åœºåŽï¼Œå¾ˆå¿«å°±ç¦»å¼€çŽ°åœºï¼Œä»»ç”±å¸‚æ°‘è¢«è¢­å‡»ï¼Œä»–è´¨ç–‘è­¦åŠ¡å¤„å¤„é•¿å¢ä¼ŸèªåŠè­¦æ–¹ï¼Œåœ¨æœªæœ‰åˆç†è§£é‡Šä¸‹ï¼Œæ²¡æœ‰æ‰§è¡ŒèŒåŠ¡ã€‚åŒæ—¶è´¨ç–‘è­¦æ–¹æ¶‰å«Œè´ªæ±¡ï¼Œâ€œè­¦åŠ¡äººå‘˜å’Œæ‰€è°“çš„ç™½è¡£äººå£«æˆ–ä¸‰åˆä¼šèƒŒæ™¯äººå£«ï¼Œä»–ä»¬èƒŒåŽæ˜¯å¦æœ‰è´ªæ±¡çš„äº‹ä»¶ï¼Œéƒ½å¸Œæœ›å»‰æ”¿å…¬ç½²ä½œå‡ºè°ƒæŸ¥ï¼Œä¸ºä½•è­¦åŠ¡äººå‘˜å¯ä»¥æœ‰äººçŠ¯æ³•è€Œä¸ä½œå‡ºæ‹˜æ•ã€‚â€</p>
+<p><ahref="https://github.com/vkwknd3513/djy/blob/master/gb/tag/%E5%B7%A5%E5%85%9A.md#1">å·¥å…š</a>ä¸»å¸­éƒ­æ°¸å¥è¿žåŒæ•°åæˆå‘˜åˆ°å»‰æ”¿æŠ¥æ¡ˆã€‚ä»–è¡¨ç¤ºï¼Œæ— è®ºä¸€èˆ¬å¸‚æ°‘æˆ–å½“åŒºåŒºè®®å‘˜åœ¨äº‹å‘å‰å·²æ”¶åˆ°ä¸åŒæ¶ˆæ¯ï¼ŒæŒ‡å¾ˆå¯èƒ½é»‘ç¤¾ä¼šæœ‰è¡ŒåŠ¨ï¼Œå¹¶äºŽäº‹å‘å½“æ—¥æŠ¥æ¡ˆï¼Œä½†è­¦æ–¹ä»éœ€åœ¨äº‹å‘åŠå°æ—¶åŽæ‰åˆ°åœºã€‚ä»–å¹¶è¯´ï¼Œä»Šæ¬¡ä¸¾æŠ¥ç‰¹åˆ«é’ˆå¯¹å…«ä¹¡åˆ†åŒºæŒ‡æŒ¥å®˜<ahref="https://github.com/vkwknd3513/djy/blob/master/gb/tag/%E6%9D%8E%E6%B1%89%E6%96%87.md#1">æŽæ±‰æ–‡</a>ï¼Œæ‰¹è¯„æŽæ±‰æ–‡åˆ°åœºåŽå®Œå…¨æ²¡æœ‰è¿›è¡Œæ‹˜æ•è¡ŒåŠ¨ï¼Œæ›´å‘è®°è€…è¡¨ç¤ºè¿Ÿåˆ°å› â€œæ— æˆ´è¡¨â€ï¼Œå¹¶è¢«æ‹åˆ°ä¸Žç™½è¡£äººæ‹è†Šå¤´ï¼Œè¿åè­¦æ–¹çš„ä¸“ä¸šå½¢è±¡å’ŒèŒè´£ï¼Œè´¨ç–‘ä»–æ˜¯æ¶‰å«Œè¿å<ahref="https://github.com/vkwknd3513/djy/blob/master/gb/tag/%E5%85%AC%E8%81%8C%E4%BA%BA%E5%91%98%E8%A1%8C%E4%B8%BA%E5%A4%B1%E5%BD%93%E7%BD%AA.md#1">å…¬èŒäººå‘˜è¡Œä¸ºå¤±å½“ç½ª</a>ï¼Œè¦æ±‚å»‰ç½²å½»æŸ¥äº‹ä»¶ã€‚â—‡</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šé™ˆçŽŸç»®</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/7/26/n11409906.htm">ÃñÕó¹¤µ³´ÙÁ®Êð³¹²é¾¯·½ÉæÏÓÊ§Ö°</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/7/24/n11406103.htm">ÃñÕó¾¯¸æÏã¸Û¾ÖÊÆ¶ñ»¯ 3¹úÒÑ·¢ÂÃÓÎ¾¯Ê¾</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/24/n11406499.htm">¡°¹â¸´ÔªÀÊ¡±ÄâÖÜÁù¾ÙÐÐ Ïã¸Û·´ËÍÖÐ½ÓÁ¬µÇ³¡</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/10/n11375465.htm">Ô¬±ó£ºÁÖÖ£µÍÍ·  ÊÇ¸ÛÈËºÍÊÀ½çÕýÒåÁ¦Á¿µÄÊ¤Àû</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/10/n11375157.htm">»ØÓ¦ÁÖÖ£³ÆÐÞÀýÒÑÊÙÖÕÕýÇÞ Ïã¸Û¸÷½ç²»½ÓÊÜ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/7/n11369869.htm">ÅÎ½Ó´¥Â½¿Í ¸ÛÈË¾ÅÁú·´ËÍÖÐ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/6/n11369040.htm">¸ÛÈË¾ÅÁúÔÙ¼¯½á·´ËÍÖÐ Ñ§Õß£ºÑ¡¾Ù¸Ä¸ï¿É½â½á</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/7/25/n11407817.htm">¡¾·­Ç½±Ø¿´¡¿·ÖÎö£ºÏ°ÄÜ´ÓÏã¸ÛÂÒ¾ÖÖÐ½âÌ×£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/23/n11402986.htm">ÈýÏ¿¹¤³Ì»ö»¼ÏµÁÐÖ®¶þ ¹¤³ÌÉè¼Æ´íÎó¼°ÎÊÌâ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/25/n11408315.htm">ÃÀ¾üÐÂÐÍB-21ÒþÐÎºäÕ¨»ú ÁÏ2021Äêµ×Ê×·É</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/25/n11407555.htm">ÔªÀÊ¾¯·½±»Ö¸×ÝÈÝºÚ°ïÏ®»÷ÊÐÃñ ÉæÏÓ·¸×ï</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/29/n11353775.htm">¡¾¶¨ÊýÆª¡¿°Ë×ÖÏàÍ¬ÕæµÄÃüÔËÒ²ÏàÍ¬Âð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/26/n11216552.htm">¡¾ÏÍºó´«¡¿½÷ÊØ¸¾µÀ ÎªËÄ³¯´øÀ´°²¶¨µÄ»Êºó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/15/7/23/n4487277.htm">ÉúËÀÓÐÃü¸»¹óÔÚÌì Ìì×ÓÒ²ÎÞ·¨¸Ä±ä</a></li>
-> <li><a href="http://www.epochtimes.com/gb/16/5/20/n7913261.htm">¡¾ÎÄÊ·¡¿ÖÇÓÂÓÐ´óÂÔ Öìé¦³ÆµÛÌìÃüËù¹é(ÉÏ)</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/24/n11405646.htm">¹ùÎÄ¹ó±¬È«Çò½øÈëÃð¹²Ê±´ú ½«ÓÐÖØ´ó±ä»¯</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/23/n11405070.htm">ÖÐ¹²¸øÀîÅô¸Ç¹×¶¨ÂÛ ¸¼¸æÌáÁ½±¥ÊÜÅê»÷ÊÂ¼þ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/24/n11407164.htm">Ã»Ç®ÁË£¿ ÖÐ¹²ÄâÁ¢·¨Õ÷ÍÁµØÔöÖµË°</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/23/n11404458.htm">¡¾ÐÂÎÅ¿´µã¡¿¸Û¾¯×ÝÈÝºÚµÀ ´¨ÆÕÍûÏ°×öÕýÈ·ÊÂ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/23/n11404675.htm">¡¾ÐÂÎÅ¿´µã¡¿Ã³Ò×Õ½ÁîÍâÆó´ó¾Ù³·Àë ÎÞ·¨Íì»Ø</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/25/n11407565.htm">¡¾ÅÄ°¸¾ªÆæ¡¿´½Ç¹ÉàÕ½ÖÇÄ±¼¤µ´ ÄÂÀÕÌýÖ¤Â¼</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/22/n11402378.htm">Áº³¯Î°½ÓÑÝÂþÍþÐÂÆ¬°¤Âî Áõ¼ÎÁáÈ°Â½ÍøÃñÀä¾²</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/24/n11406909.htm">·í´ÌÇ×¹²ÒéÔ±ºÎ¾ýÒ¢ ¶ÅãëÔó³ªÄî¾«²Ê´òÓÍÊ«</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/22/n11402602.htm">ºÚ°ïÔªÀÊÊ©±© É­ÃÀßìÑÊ£ºÔõÑùÈÃÏã¸Û±ä»ØÏã¸Û</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/22/n11402768.htm">´ÇÈ¥¸ÛÃ½×¨À¸Ð´×÷ ¸ÛÐÇÍõÏ²»ñÔÞÓÐ¹ÇÆø</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/7/23/n11404659.htm">¸ßÔ²Ô²²úºóÊ×¶ÈÉ¹ÕÕ ÓÃÎ÷¹Ïµ±È¹×Ó´´ÒâÊ®×ã</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/19/7/6/n11369040.md#1">æ¸¯äººä¹é¾™å†é›†ç»“åé€ä¸­ å­¦è€…ï¼šé€‰ä¸¾æ”¹é©å¯è§£ç»“</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/19/7/7/n11369869.md#1">ç›¼æŽ¥è§¦é™†å®¢ æ¸¯äººä¹é¾™åé€ä¸­</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/19/7/10/n11375157.md#1">å›žåº”æž—éƒ‘ç§°ä¿®ä¾‹å·²å¯¿ç»ˆæ­£å¯ é¦™æ¸¯å„ç•Œä¸æŽ¥å—</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/19/7/10/n11375465.md#1">è¢æ–Œï¼šæž—éƒ‘ä½Žå¤´  æ˜¯æ¸¯äººå’Œä¸–ç•Œæ­£ä¹‰åŠ›é‡çš„èƒœåˆ©</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=6&t=&d=https://github.com/cbzs/djy/blob/master/gb/19/7/26/n11409906.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/cbzs/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/cbzs/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/cbzs/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/cbzs/2/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cbzs/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/4/17/n10310732.md#1" target="_blank">å…±äº§æš´æ”¿å½•ï¼šå°æ¹¾åœŸæ”¹ä¸Žå¤§é™†åœŸæ”¹çš„å¯¹æ¯”</a></li><li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/10/26/n9771543.md#1" target="_blank">ä¸­å…±æŠ¹é»‘æŽæ´ªå¿—å…ˆç”Ÿâ€œæ•›è´¢â€çœŸç›¸</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/8/n12240778.md#1">æ—¥ç±å¥³ç”ŸæŸ“ç–« å°æ¹¾é‡‡æ£€213äººæŠ—ä½“ ç»“æžœå‡ºç‚‰</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/7/n12239553.md#1">è´µå·žå¤§å·´21æ­» ä¼ å¸æœºæ˜¯é€€ä¼å†›äººã€æ‹†è¿æˆ·</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/3/n12231462.md#1">ã€ç‹¬å®¶ã€‘ä¹ è¿‘å¹³æ€¯æ­¥å†›è¥çš„èƒŒåŽ</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/7/n12238373.md#1">ã€ä¸€çº¿é‡‡è®¿ã€‘è´µå·žé«˜è€ƒå¤§å·´å æ°´è‡³å°‘21æ­»</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/7/n12239450.md#1">FBIååœ¨ç¾ŽåŽäººï¼šå¦‚è¢«å¼ºè¿«å›žå›½ å‘ç¾Žå›½æŠ¥å‘Š</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/6/n12236320.md#1">60å²æ¨è´µåªšæ™•çœ©å‘ä½œ åè½®æ¤…å°±åŒ»æ£€æŸ¥</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/6/n12237412.md#1">æ”¶6å²å¥³å„¿é€çŽ«ç‘°èŠ±èŒ¶ å­™ä¿ªç›´å‘¼èˆä¸å¾—å–</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/6/n12236838.md#1">æµ™æ±Ÿå«è§†é«˜ç®¡çˆ†å·¨é¢å—è´¿ å‘¨å†¬é›¨å—ç‰µè¿žæŒ¨è½°</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/5/n12234872.md#1">TVBç¥­åŠ è¾£æ¡æ¬¾ éƒ‘æ•¬åŸºï¼šå‰æ‰€æœªæœ‰çš„ç™½è‰²ææ€–</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/7/n12239433.md#1">å¤å‡ºä¸é¡ºè½¬å½“ç½‘çº¢ï¼ŸèŒƒå†°å†°æŠ–éŸ³æ˜µç§°å¼•çƒ­è®®</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/6/n12237076.md#1">å¼ºåˆ¶äº”ä¸ªå­©å­æˆ’â€œç½‘ç˜¾â€ ç»“æžœéœ‡æƒŠå¦ˆå¦ˆ</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/4/23/n12056338.md#1">æ¸…æœä¸–ç•Œé¦–å¯Œä¼ç§‰é‰´ ç¼”é€ æ¬§ç¾Žå•†ç•Œä¼ è¯´</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/2/n12227327.md#1">1972å¹´è’‹ç»å›½å‘è¡¨ã€Šåå…±å¤å›½çš„æ€»ç›®æ ‡ç»ä¸æ”¹å˜ã€‹</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/5/27/n12141489.md#1">ã€åº·ç†™å¤§å¸ã€‘è¿œèµ´æœ”æ¼  ä¸‰å¾è‘›å°”ä¸¹</a></li>
+<li><a href="https://github.com/vkwknd3513/djy/blob/master/gb/20/7/3/n12230158.md#1">ç»˜ç”»ä¸­çš„ç˜Ÿç–«â€”â€”ç½ªä¸Žç½šçš„æ•…äº‹ï¼ˆä¸€ï¼‰</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/vkwknd3513/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/vkwknd3513/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/7/26/n11409906.htm">æ°‘é˜µå·¥å…šä¿ƒå»‰ç½²å½»æŸ¥è­¦æ–¹æ¶‰å«Œå¤±èŒ</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/vkwknd3513/djy/blob/master/gb/19/7/26/n11409906.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/vkwknd3513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/vkwknd3513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/vkwknd3513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/vkwknd3513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/vkwknd3513/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
